--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Allsky-Kamera der Angelaschule Osnabrück</title>
+  <title>Allsky-Dashboard der Angelaschule Osnabrück</title>
 
 
 
@@ -62,7 +62,7 @@
 
   <div id="header">
     <article>
-      <h1>Allsky-Website</h1>
+      <h1>Angelaschule Allsky-Dashboard</h1>
       <p>aktuelles Live-Bild der Kamera</p>
     </article>
   </div>
@@ -81,35 +81,13 @@
     <iframe src="https://sensebox.github.io/opensensemap-widget/iframe.html?senseboxId=601ef8f1e443a0001bc5e45c" width="400" height="600"
       marginwidth="8" marginheight="8" hspace="0" vspace="0" frameborder="0" scrolling="no"></iframe>
 
-    <article>
-      <p>Temperatur der Kamera: <code id="temp"></code></p>
-      <p>Luftdruck in der Kamera: <code id="pressure"></code></p>
-      <p>Luftfeuchtigkeit in der Kamera: <code id="humidity"></code></p>
-
-    </article>
 
     <script>
-      function fetchStatus() {
-        fetch('https://api.opensensemap.org/boxes/601ef8f1e443a0001bc5e45c')
-          .then((response) => response.json())
-          .then((data) => {
-            $("#temp").html(data.sensors[0].lastMeasurement.value + "°C");   //aktuelle Werte der Sensoren
-
-            $("#pressure").html(data.sensors[1].lastMeasurement.value + "hPa");
-
-            $("#humidity").html(data.sensors[2].lastMeasurement.value + "%")
-
-          });
-      };
-
       window.addEventListener('load', function () {
         var fetchInterval = 5000;
 
         setInterval(fetchStatus, fetchInterval);
       });
-
-
-
     </script>
   </div>
 
