--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 
 
   <style>
+      @font-face {
+        font-family: Monocraft;
+        src: url("css/Monocraft.otf") format("opentype");
+      }
     body {
-      background: darkblue;
+      background: #000900;
+      color: #4AEF98;
+      font-family: Monocraft;
+
     }
 
     .js {
       background: #fcc;
     }
+
     p {
-      color: grey;
+      color: #4AEF98;
       border: thin solid;
       margin: 20px;
       padding: 1em;
@@ -73,13 +81,15 @@
   </nav>
   <div id="stream">
     <div>
-      <iframe src="https://player.twitch.tv/?channel=allsky_angelaschule&parent=angelaschule-os.github.io&muted=true" id="idIframe"
-        onload="iframeLoaded()" style="border: none; height:600px;width:100%; margin: 0 0 0 1%;" allowfullscreen scrolling="no">
+      <iframe src="https://player.twitch.tv/?channel=allsky_angelaschule&parent=angelaschule-os.github.io&muted=true"
+        id="idIframe" onload="iframeLoaded()" style="border: none; height:600px;width:100%; margin: 0 0 0 1%;"
+        allowfullscreen scrolling="no">
       </iframe>
     </div>
 
-    <iframe src="https://sensebox.github.io/opensensemap-widget/iframe.html?senseboxId=601ef8f1e443a0001bc5e45c" width="400" height="600"
-      marginwidth="8" marginheight="8" hspace="0" vspace="0" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://sensebox.github.io/opensensemap-widget/iframe.html?senseboxId=601ef8f1e443a0001bc5e45c"
+      width="400" height="600" marginwidth="8" marginheight="8" hspace="0" vspace="0" frameborder="0"
+      scrolling="no"></iframe>
 
 
     <script>
