Archive css styling.

--- a/archiv.html
+++ b/archiv.html
@@ -7,12 +7,26 @@
   <title>Bilder/Videoarchiv der Allsky-Kamera der Angelaschule Osnabrück</title>
 </head>
 
+<style>
+  @font-face {
+    font-family: Monocraft;
+    src: url("css/Monocraft.otf") format("opentype");
+  }
+
+  body {
+    background: #000900;
+    color: #4AEF98;
+    font-family: Monocraft;
+
+  }
+</style>
+
 
 <body>
   <div id="header">
     <h1>Allsky-Archiv<h1>
         <p>Hier zu finden sind die Videos der vergangenen Nächte. Außerdem werden hier die Wetterdiagramme der Sensoren,
-          die sich innerhalb der Kamera befinden, hier hochgeladen.</p>
+          die sich innerhalb der Kamera befinden, hochgeladen.</p>
   </div>
 
   <div id="file-list">
