Changed heading added .nojekyll.

--- a/archiv.html
+++ b/archiv.html
@@ -24,7 +24,7 @@
 
 <body>
   <div id="header">
-    <h1>Allsky-Archiv<h1>
+    <h1>Angelaschule: Allsky-Archiv<h1>
         <p>Hier zu finden sind die Videos der vergangenen Nächte. Außerdem werden hier die Wetterdiagramme der Sensoren,
           die sich innerhalb der Kamera befinden, hochgeladen.</p>
   </div>
